--- a/oas-internal.yaml
+++ b/oas-internal.yaml
@@ -50,6 +50,8 @@ components:
           type: array
           items:
             type: string
+        nestedType:
+          $ref: '#/components/schemas/NumberPercentType'
       required:
         - type
         - stopwords
