--- a/oas-external.yaml
+++ b/oas-external.yaml
@@ -55,6 +55,8 @@ components:
           type: array
           items:
             type: string
+        nestedType:
+          $ref: '#/components/schemas/NumberPercentType'
       required:
         - stopwords
       example:
